// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLabelSelect renders options 1`] = `
<div>
  <div
    class="wcpay-filter components-custom-select-control onboarding-select-control"
  >
    <button
      aria-describedby="Currently selected: EUR €"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Currency"
      class="components-button wcpay-filter components-custom-select-control__button"
      id="downshift-0-toggle-button"
      type="button"
    >
      <label
        class="wcpay-filter components-custom-select-control__label"
        for="downshift-0-toggle-button"
        id="downshift-0-label"
      >
        Currency
      </label>
      <span
        class="wcpay-filter components-custom-select-control__button-value"
      >
        EUR €
      </span>
      <svg
        aria-hidden="true"
        class="wcpay-filter components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="downshift-0-item-0"
      aria-hidden="false"
      aria-labelledby="downshift-0-label"
      class="wcpay-filter components-custom-select-control__menu"
      id="downshift-0-menu"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="wcpay-filter components-custom-select-control__item is-highlighted"
        id="downshift-0-item-0"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="visible"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        EUR €
      </li>
      <li
        aria-selected="false"
        class="wcpay-filter components-custom-select-control__item"
        id="downshift-0-item-1"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="hidden"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        JPY ¥
        <span
          class="wcpay-filter components-custom-select-control__item-hint"
        >
          Japanese Yen
        </span>
      </li>
      <li
        aria-selected="false"
        class="wcpay-filter components-custom-select-control__item"
        id="downshift-0-item-2"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="hidden"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        GBP £
        <span
          class="wcpay-filter components-custom-select-control__item-hint"
        >
          British Pound
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`InlineLabelSelect renders options with custom children 1`] = `
<div>
  <div
    class="wcpay-filter components-custom-select-control onboarding-select-control"
  >
    <button
      aria-describedby="No selection"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="Currency"
      class="components-button wcpay-filter components-custom-select-control__button placeholder"
      id="downshift-2-toggle-button"
      type="button"
    >
      <label
        class="wcpay-filter components-custom-select-control__label"
        for="downshift-2-toggle-button"
        id="downshift-2-label"
      >
        Currency
      </label>
      <span
        class="wcpay-filter components-custom-select-control__button-value"
      >
        Currency
      </span>
      <svg
        aria-hidden="true"
        class="wcpay-filter components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-hidden="true"
      aria-labelledby="downshift-2-label"
      class="wcpay-filter components-custom-select-control__menu"
      id="downshift-2-menu"
      role="listbox"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`InlineLabelSelect renders with placeholder 1`] = `
<div>
  <div
    class="wcpay-filter components-custom-select-control onboarding-select-control"
  >
    <button
      aria-describedby="No selection"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Currency"
      class="components-button wcpay-filter components-custom-select-control__button placeholder"
      id="downshift-5-toggle-button"
      type="button"
    >
      <label
        class="wcpay-filter components-custom-select-control__label"
        for="downshift-5-toggle-button"
        id="downshift-5-label"
      >
        Currency
      </label>
      <span
        class="wcpay-filter components-custom-select-control__button-value"
      >
        Currency
      </span>
      <svg
        aria-hidden="true"
        class="wcpay-filter components-custom-select-control__button-icon"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
        />
      </svg>
    </button>
    <ul
      aria-hidden="false"
      aria-labelledby="downshift-5-label"
      class="wcpay-filter components-custom-select-control__menu"
      id="downshift-5-menu"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="false"
        class="wcpay-filter components-custom-select-control__item"
        id="downshift-5-item-0"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="hidden"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        EUR €
      </li>
      <li
        aria-selected="false"
        class="wcpay-filter components-custom-select-control__item"
        id="downshift-5-item-1"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="hidden"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        JPY ¥
        <span
          class="wcpay-filter components-custom-select-control__item-hint"
        >
          Japanese Yen
        </span>
      </li>
      <li
        aria-selected="false"
        class="wcpay-filter components-custom-select-control__item"
        id="downshift-5-item-2"
        role="option"
      >
        <svg
          aria-hidden="true"
          class="wcpay-filter components-custom-select-control__item-icon"
          focusable="false"
          height="24"
          viewBox="0 0 24 24"
          visibility="hidden"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z"
          />
        </svg>
        GBP £
        <span
          class="wcpay-filter components-custom-select-control__item-hint"
        >
          British Pound
        </span>
      </li>
    </ul>
  </div>
</div>
`;
